<resources>
    <string name="app_name">BottomAppBarBehaviour</string>

    <string name="action_favorite">Mark Favorite</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_archieve">Archieve</string>
    <string name="action_mail">Mail</string>
    <string name="toggle_fab_string">Toggle Screen</string>
    <string name="nav_item1">Item 1</string>
    <string name="nav_item2">Item 2</string>
    <string name="nav_item3">Item 3</string>
    <string name="nav_item4">Item 4</string>
    <string name="nav_item5">Item 5</string>
    <string name="nav_item6">Item 6</string>
    <string name="nav_item7">Item 7</string>
    <string name="nav_item8">Item 8</string>
    <string name="nav_item9">Item 9</string>
    <string name="nav_item10">Item 10</string>
    <string name="nav_item11">Item 11</string>
    <string name="nav_item12">Item 12</string>
    <string name="nav_item13">Item 13</string>


    <string name="bottom_sheet_name">Fırat Karababa</string>
    <string name="bottom_sheet_email">example@mail.com</string>
    <string name="primary_screen_text">Primary Screen</string>
    <string name="secondary_sceen_text">Secondary Screen</string>

</resources>
