<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav1"
            android:icon="@drawable/baseline_mail_white_24"
            android:title="@string/nav_item1" />
        <item
            android:id="@+id/nav2"
            android:icon="@drawable/baseline_bookmark_white_24"
            android:title="@string/nav_item2" />
        <item
            android:id="@+id/nav3"
            android:icon="@drawable/baseline_message_white_24"
            android:title="@string/nav_item3" />
        <item
            android:id="@+id/nav4"
            android:icon="@drawable/baseline_note_white_24"
            android:title="@string/nav_item4" />
        <item
            android:id="@+id/nav5"
            android:icon="@drawable/baseline_location_on_white_24"
            android:title="@string/nav_item5" />
        <item
            android:id="@+id/nav6"
            android:icon="@drawable/baseline_sync_white_24"
            android:title="@string/nav_item6" />
        <item
            android:id="@+id/nav7"
            android:icon="@drawable/baseline_cloud_upload_white_24"
            android:title="@string/nav_item7" />
        <item
            android:id="@+id/nav8"
            android:icon="@drawable/baseline_favorite_white_24"
            android:title="@string/nav_item8" />
        <item
            android:id="@+id/nav9"
            android:icon="@drawable/baseline_chrome_reader_mode_white_24"
            android:title="@string/nav_item9" />
        <item
            android:id="@+id/nav10"
            android:icon="@drawable/baseline_select_all_white_24"
            android:title="@string/nav_item10" />
        <item
            android:id="@+id/nav11"
            android:icon="@drawable/baseline_sort_white_24"
            android:title="@string/nav_item11" />
        <item
            android:id="@+id/nav12"
            android:icon="@drawable/baseline_access_time_white_24"
            android:title="@string/nav_item12" />
        <item
            android:id="@+id/nav13"
            android:icon="@drawable/baseline_data_usage_white_24"
            android:title="@string/nav_item13" />
    </group>
</menu>
